fixing the search bar